<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Poker Ledger</string>

    <string name="more">More</string>

    <string name="active_session_activity_name">Active Session</string>
    <string name="finish_session_activity_name">Finish Session</string>
    <string name="history_activity_name">History</string>
    <string name="statistics_activity_name">Statistics</string>
    <string name="update_activity_name">Update Session</string>
    <string name="backup_activity_name">Backup &amp; Restore</string>
    <string name="filter_activity_name">Filters</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_session">Add Session</string>
    <string name="action_view_history">History</string>
    <string name="action_backup_restore">Backup &amp; Restore</string>
    <string name="action_filter">Filters</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_sync">Sync</string>

    <string name="structure_prompt">Select Structure</string>
    <string name="game_prompt">Select Game</string>
    <string name="location_prompt">Select Location</string>
    <string name="blinds_prompt">Select Blind</string>
    <string name="formats_prompt">Select Format</string>

    <string name="tourney_radio_text">Tournament</string>
    <string name="cash_radio_text">Cash</string>

    <string name="buy_in_hint">Buy In</string>
    <string name="cash_out_hint">Cash Out</string>
    <string name="entrants_hint">Entrants</string>
    <string name="placed_hint">Placed</string>
    <string name="new_location_hint">New</string>
    <string name="new_format_hint">New</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="view_breaks_hint">View Breaks</string>
    <string name="add_break_hint">Add Break</string>
    <string name="notes_hint">Notes (300 char. max)</string>
    <string name="save_session_hint">Save</string>
    <string name="login_radio_text">Login</string>
    <string name="register_radio_text">Register</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="confirm_hint">confirm password</string>
    <string name="backup_db_hint">Backup</string>
    <string name="restore_db_hint">Restore</string>

    <string name="sb_hint">SB</string>
    <string name="bb_hint">BB</string>
    <string name="straddle_hint">Straddle</string>
    <string name="bring_hint">Bring In</string>
    <string name="ante_hint">Ante</string>
    <string name="points_hint">$/point</string>

    <string name="close_dialog_hint">Close</string>
    <string name="cancel_dialog_hint">Cancel</string>

    <string name="overview_title">OVERVIEW</string>
    <string name="summary_title">SUMMARY</string>
    <string name="active_games_title">ACTIVE GAMES</string>
    <string name="wage_game_title">HOURLY WAGE BY GAME</string>
    <string name="wage_day_title">HOURLY WAGE BY DAY</string>

    <string name="overview_profit">Profit</string>
    <string name="overview_time">Time Played</string>
    <string name="overview_hourly">Hourly Wage</string>

    <string-array name="timeblocks_array">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>All</item>
    </string-array>
</resources>
