<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/add_session"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_session"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionMore"
        android:icon="@drawable/more"
        android:showAsAction="always"
        android:title="@string/more">

        <menu>

            <item android:id="@+id/history"
                android:icon="@drawable/ic_action_history"
                android:title="@string/action_view_history"
                android:showAsAction="ifRoom" />

            <item android:id="@+id/statistics"
                android:icon="@drawable/ic_action_statistics"
                android:title="@string/action_statistics"
                android:showAsAction="ifRoom" />
        </menu>
    </item>
    <!--
                <item android:id="@+id/sync"
                    android:title="@string/action_sync"
                    android:showAsAction="ifRoom" />

                <item android:id="@+id/action_settings"
                    android:title="@string/action_settings"
                    android:showAsAction="ifRoom" />
        -->
</menu>
