<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/active_games_header"
        android:text="@string/active_games_title"
        style="@style/header"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/list"
        style="@style/subheader"
        android:paddingTop="0dp"
        android:layout_below="@id/active_games_header">
    </ListView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@id/list" >

        <TextView
            android:id="@+id/overview_header"
            android:text="@string/overview_title"
            style="@style/header"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/wrapper2"
            android:orientation="vertical"
            style="@style/subheader">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/row1"
                android:orientation="horizontal"
                style="@style/row">

                <TextView
                    android:id="@+id/profit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_profit" />

                <TextView
                    android:id="@+id/profit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#008000" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/row2"
                android:orientation="horizontal"
                style="@style/row">

                <TextView
                    android:id="@+id/time_played_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_time" />

                <TextView
                    android:id="@+id/time_played"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_below="@id/profit" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/row3"
                android:orientation="horizontal"
                style="@style/row">

                <TextView
                    android:id="@+id/hourly_wage_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_hourly" />

                <TextView
                    android:id="@+id/hourly_wage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#008000" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
