<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/timeframe_wrapper"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff">

        <Spinner
            android:id="@+id/timeblocks"
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content"
            android:textSize="10dp" />

        <Spinner
            android:id="@+id/timeframes"
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content"
            android:textSize="10dp" />
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/overview_wrapper"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingBottom="@dimen/standard_padding"
        android:paddingLeft="@dimen/standard_padding"
        android:paddingRight="@dimen/standard_padding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/timeframe_wrapper"
        android:background="#ffffffff">

        <TextView
            android:id="@+id/profit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_profit" />

        <TextView
            android:id="@+id/profit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_toRightOf="@id/profit_label" />

        <TextView
            android:id="@+id/time_played_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profit_label"
            android:text="@string/overview_time" />

        <TextView
            android:id="@+id/time_played"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_toRightOf="@id/time_played_label"
            android:layout_below="@id/profit" />

        <TextView
            android:id="@+id/hourly_wage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_played_label"
            android:text="@string/overview_hourly" />

        <TextView
            android:id="@+id/hourly_wage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_toRightOf="@id/hourly_wage_label"
            android:layout_below="@id/time_played" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="@dimen/standard_padding"
        android:paddingRight="@dimen/standard_padding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/overview_wrapper">
    </ListView>
</RelativeLayout>